2004-07-16  Paolo Borelli  <pborelli@katamail.com>

	* gedit-file.[ch]: allow to specify the encoding when opening a
	uri list.
	* gedit-mdi.c:
	* gedit-window-server.c: update the callers.
	* gedit2.c: add the --encoding option.

2004-07-14  Paolo Maggi  <paolo.maggi@polito.it>

	* bonobo-mdi.c (bonobo_mdi_n_views_for_window):
	* bonobo-mdi.h (bonobo_mdi_n_views_for_window): rename
	bonobo_mdi_n_children_for_window to bonobo_mdi_n_views_for_window

	* gedit-file.c (gedit_file_close) (gedit_file_close_all):
	always call gedit_mdi_set_active_window_verbs_sensitivity (fix 
	bug #142091). Based on a patch by Madhan Raj M <raj_madan@rediffmail.com>

	* gedit-mdi-child.c (menu_show): 
	s/bonobo_mdi_n_children_for_window/bonobo_mdi_n_views_for_window
	* gedit-mdi.c (gedit_mdi_set_active_window_verbs_sensitivity): ditto

2004-07-13  Paolo Borelli  <pborelli@katamail.com>

	* gedit2.[ch]:
	* gedit-commands.c: remove two unused global vars.

2004-07-10  Muktha  <muktha.narayan@wipro.com>

	* dialogs/gedit-close-confirmation-dialog.c 
	(gedit_close_confirmation_dialog_init): Set accessible name for
	the confirmation dialog. Fixes #144863.

2004-06-26  Muktha  <muktha.narayan@wipro.com>

	* dialogs/gedit-page-setup-dialog.c (dialog_response_handler):
	* dialogs/gedit-preferences-dialog.c (dialog_response_handler):
	Display help when page setup help button is clicked.
	Fixes #141505 and #144999.

2004-06-27  Paolo Borelli  <pborelli@katamail.com>

	* dialogs/gedit-preferences-dialog.c: fix bug #141741 (Syntax
	Highlighting prefernces get confused). Based on a patch by Travis
	Snoozy.

2004-06-25  Paolo Borelli  <pborelli@katamail.com>

	* dialogs/replace.glade2: fix bug #143410.
	Patch by <padraig.obriain@sun.com>

2004-06-25  Paolo Borelli  <pborelli@katamail.com>

	* gedit-encodings-option-menu.c: include config.h, patch from
	Takao Fujiwara. Fixes 144525.

2004-06-11  Kaushal Kumar <kaushal.kumar@wipro.com>
 
	Patch by: Archana Shah <archana.shah@wipro.com>